--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,10 +15,9 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Make test scripts executable
-      run: | 
-		chmod +x finder-app/finder-test.sh
-		chmod +x full-test.sh
-		chmod +x unit-test.sh
+      run: chmod +x finder-app/finder-test.sh
+	  run: chmod +x full-test.sh
+	  run: chmod +x unit-test.sh
 
     - name: Run finder-test.sh
       run: finder-app/finder-test.sh
