--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,12 +12,10 @@ jobs:
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v3
-
-    - name: Make test scripts executable
-      run: |
-        chmod +x full-test.sh
-        chmod +x unit-test.sh
-
+    - name: Make full-test script executable
+      run: chmod +x full-test.sh
+    - name: Make full-test script executable
+      run: chmod +x unit-test.sh#
 	- name: Run full-test.sh
       run: ./full-test.sh
 	- name: Run unit-test.sh
