--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,14 +9,20 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+
     steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v3
-    - name: Make full-test script executable
-      run: chmod +x full-test.sh
-    - name: Make full-test script executable
-      run: chmod +x unit-test.sh
-	- name: Run full-test.sh
-      run: ./full-test.sh
-	- name: Run unit-test.sh
-      run: ./unit-test.sh
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+
+      - name: Make full-test.sh executable
+        run: chmod +x full-test.sh
+
+      - name: Make unit-test.sh executable
+        run: chmod +x unit-test.sh
+
+      - name: Run full-test.sh
+        run: ./full-test.sh
+
+      - name: Run unit-test.sh
+        run: ./unit-test.sh
+
