--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,3 +14,9 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
+      - name: Make unit-test.sh executable
+        run: chmod +x unit-test.sh
+
+      - name: Run unit-test.sh
+        run: ./unit-test.sh
+
