--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,9 +14,8 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      - name: Make unit-test.sh executable
-        run: chmod +x unit-test.sh
+      - name: Make full-test.sh executable
+        run: chmod +x full-test.sh
 
-      - name: Run unit-test.sh
-        run: ./unit-test.sh
-
+      - name: Run full-test.sh
+        run: ./full-test.sh
